--- a/submit-claim.html
+++ b/submit-claim.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit Claim - SecureLife Insurance</title>
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Genesys Cloud Messenger SDK -->
+    <script type="text/javascript" charset="utf-8">
+      (function (g, e, n, es, ys) {
+        g['_genesysJs'] = e;
+        g[e] = g[e] || function () {
+          (g[e].q = g[e].q || []).push(arguments)
+        };
+        g[e].t = 1 * new Date();
+        g[e].c = es;
+        ys = document.createElement('script'); ys.async = 1; ys.src = n; ys.charset = 'utf-8'; document.head.appendChild(ys);
+      })(window, 'Genesys', 'https://apps.euw2.pure.cloud/genesys-bootstrap/genesys.min.js', {
+        environment: 'prod-euw2',
+        deploymentId: '7953b9f3-bac3-4b1d-95e4-9d489c49af26'
+      });
+    </script>
+    
+    <!-- Genesys Journey Tracking -->
+    <script type="text/javascript" charset="utf-8">
+      Genesys("subscribe", "Journey.ready", function() {
+        setTimeout(function () {
+          let pathname = window.location.pathname;
+          if (!pathname || pathname == "/") {
+            pathname = "/home";
+          }
+          let segments = pathname.split('/').filter(Boolean);
+          pathname = "/" + segments[segments.length - 1];
+
+          Genesys("command", "Journey.pageview", {
+            pageTitle: pathname
+          });
+        });
+      });
+    </script>
 </head>
 <body>
     <header>
@@ -195,5 +229,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="genesys-integration.js"></script>
 </body>
 </html>
