--- a/insurance-website/submit-claim.html
+++ b/insurance-website/submit-claim.html
@@ -7,9 +7,38 @@
     <link rel="stylesheet" href="styles.css">
     
     <!-- Genesys Cloud Messenger SDK -->
-    <!-- Genesys SDK loaded in genesys-minimal.js to avoid conflicts -->
+    <script type="text/javascript" charset="utf-8">
+      (function (g, e, n, es, ys) {
+        g['_genesysJs'] = e;
+        g[e] = g[e] || function () {
+          (g[e].q = g[e].q || []).push(arguments)
+        };
+        g[e].t = 1 * new Date();
+        g[e].c = es;
+        ys = document.createElement('script'); ys.async = 1; ys.src = n; ys.charset = 'utf-8'; document.head.appendChild(ys);
+      })(window, 'Genesys', 'https://apps.euw2.pure.cloud/genesys-bootstrap/genesys.min.js', {
+        environment: 'prod-euw2',
+        deploymentId: '7953b9f3-bac3-4b1d-95e4-9d489c49af26'
+      });
+    </script>
     
-    <!-- Journey tracking also handled in genesys-minimal.js -->
+    <!-- Genesys Journey Tracking -->
+    <script type="text/javascript" charset="utf-8">
+      Genesys("subscribe", "Journey.ready", function() {
+        setTimeout(function () {
+          let pathname = window.location.pathname;
+          if (!pathname || pathname == "/") {
+            pathname = "/home";
+          }
+          let segments = pathname.split('/').filter(Boolean);
+          pathname = "/" + segments[segments.length - 1];
+
+          Genesys("command", "Journey.pageview", {
+            pageTitle: pathname
+          });
+        });
+      });
+    </script>
 </head>
 <body>
     <header>
